--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.126",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.14",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
